--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
   box-sizing: border-box;
 }
 :root {
-  --secondary: rgb(196, 192, 192);
+  --secondary: rgb(224, 219, 219);
+  --primary: rgb(166, 214, 233);
+  --primary-dark: rgb(71, 138, 216);
 }
 body {
-  height: 80vh;
+  height: 200vh;
   width: 100%;
 }
 .flex {
@@ -22,16 +24,23 @@ body {
 .img-size {
   width: 500px;
 }
+.btn {
+  padding: 15px 30px;
+  background: var(--primary);
+  border: none;
+  margin: 20px;
+}
 .navbar {
   justify-content: space-between;
 }
 .title {
   background: var(--secondary);
+  padding: 10px 20px;
 }
 li {
   list-style: none;
   margin: 10px;
-  padding: 10px;
+  padding: 10px 20px;
   background: var(--secondary);
 }
 a {
@@ -39,29 +48,63 @@ a {
 }
 .section {
   position: relative;
-  background: url('Ngo/Vector.png');
-  height: 100%;
+  top: 20%;
+  background: url('Ngo/Group 6.png') no-repeat center center/cover;
+  height: 50%;
   width: 100%;
+}
+.web-info h1 {
+  margin-left: 20px;
 }
 .container1 {
   position: absolute;
-  /* z-index: 1; */
+  z-index: 1;
+  top: -100px;
   justify-content: space-between;
+
   /* background: url('Ngo/Vector1.png'); */
-  height: 100%;
+  height: 50%;
   width: 80%;
+}
+.web-info {
+  align-self: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  color: var(--primary-dark);
 }
 .container2 {
   position: absolute;
-  /* z-index: 1; */
-  top: 100%;
+  z-index: 1;
+  top: 60%;
   justify-content: space-between;
-  /* background: url('Ngo/Vector1.png'); */
-  height: 100%;
-  width: 80%;
+  /* background: url('Ngoector1.png'); */
+  height: 80%;
+  width: 100%;
 }
 .cont-left,
 .cont-right {
   flex-direction: column;
   flex: 0.5;
+}
+.cont-left {
+  margin-left: 60px;
+  align-items: flex-start;
+}
+.cont-right {
+  margin-top: 120px;
+}
+.cont-right .btn {
+  margin-left: 80px;
+}
+
+.about-info {
+  margin: 60px 0;
+}
+.donations {
+  height: 200px;
+  width: 350px;
+  background: var(--primary);
+  margin-left: 50px;
+  margin-bottom: 50px;
+  border-radius: 30px 30px 30px 0;
 }
