--- a/Category/css/main.css
+++ b/Category/css/main.css
@@ -32,6 +32,8 @@ body {
   border-radius: 1em;
   -webkit-transition: all 2s;
   transition: all 2s;
+  -webkit-box-shadow: 0px 20px 28px -8px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 20px 28px -8px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   width: 7vw;
   -webkit-transition: all 0.5s;
