--- a/Category/css/main.scss
+++ b/Category/css/main.scss
@@ -26,6 +26,7 @@ body{
     justify-content: space-between;
     border-radius: 1em;
     transition: all 2s;
+    box-shadow: 0px 20px 28px -8px rgba(0, 0, 0, 0.25);
     overflow: hidden;
     width: 7vw;
     transition: all 0.5s;
