--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@ body {
   background: var(--primary);
   border: none;
   margin: 20px;
+  font-size: 1.2rem;
+  color: white;
+  text-shadow: 2px 2px 5px black;
+  font-weight: 600;
+  cursor: pointer;
+}
+.shadow {
+  color: white;
+  text-shadow: 2px 2px 5px black;
 }
 .navbar {
   justify-content: space-between;
@@ -43,18 +52,34 @@ body {
   z-index: 2;
   background: white;
 }
+.navbar ul li a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #2bafaf;
+  transition: all 0.5s ease;
+  font-size: 18px;
+
+  font-family: 'Lato', sans-serif;
+}
 .title {
-  background: var(--secondary);
   padding: 10px 20px;
 }
 li {
   list-style: none;
   margin: 10px;
   padding: 10px 20px;
-  background: var(--secondary);
 }
 a {
   text-decoration: none;
+}
+.navbar ul li {
+  padding: 10px 3px;
+  margin-right: 40px;
+  transition: all 0.5s ease;
+  background: none;
+}
+.navbar ul li:hover {
+  transform: translateY(-2.5px);
 }
 .section {
   position: relative;
@@ -66,6 +91,7 @@ a {
 .web-info h1 {
   margin: 15px;
   margin-left: 20px;
+  color: var(--primary-dark);
 }
 .web-info p {
   margin-left: 20px;
