--- a/Category/Card/main.css
+++ b/Category/Card/main.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -11,24 +11,25 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: auto;
 }
 
 .card {
   color: white;
-  background: #0F78E8;
+  background: #0f78e8;
   background-size: cover;
   margin-top: 20vh;
   margin-left: 2em;
-  margin-bottom: 5em;
+  margin-bottom: 1em;
   padding: 10rem 0 0;
-  max-width: 27ch;
+  width: 200px;
   border-radius: 1em;
   overflow: hidden;
   -webkit-transition: -webkit-transform 500ms ease;
@@ -39,7 +40,7 @@ body {
 
 .card:hover {
   -webkit-box-shadow: 0px 20px 36px -10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 20px 36px -10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 20px 36px -10px rgba(0, 0, 0, 0.25);
 }
 
 .card_content {
@@ -59,17 +60,17 @@ body {
 }
 
 .card_title::after {
-  content: " ";
+  content: ' ';
   position: absolute;
   height: 4px;
-  left: calc((var(--padding))*-1);
+  left: calc((var(--padding)) * -1);
   bottom: 0;
   width: calc(100% + var(--padding));
   background: #fff;
   -webkit-transform-origin: left;
-          transform-origin: left;
+  transform-origin: left;
   -webkit-transform: scaleX(0);
-          transform: scaleX(0);
+  transform: scaleX(0);
   -webkit-transition: -webkit-transform 500ms ease;
   transition: -webkit-transform 500ms ease;
   transition: transform 500ms ease;
@@ -82,7 +83,7 @@ body {
   text-decoration: none;
   color: black;
   background: #61d384;
-  padding: .5em 1.25em;
+  padding: 0.5em 1.25em;
   border-radius: 0.25em;
   margin-top: 10px;
   -webkit-transition: all 2s ease-in;
@@ -91,7 +92,7 @@ body {
 
 .card_title::after {
   -webkit-transform: scaleX(0);
-          transform: scaleX(0);
+  transform: scaleX(0);
 }
 
 .button:hover,
@@ -102,7 +103,7 @@ body {
 @media (hover) {
   .card_content {
     -webkit-transform: translateY(50%);
-            transform: translateY(50%);
+    transform: translateY(50%);
     -webkit-transition: -webkit-transform 500ms ease;
     transition: -webkit-transform 500ms ease;
     transition: transform 500ms ease;
@@ -111,13 +112,13 @@ body {
   .card:hover .card_content,
   .card:focus-within .card_content {
     -webkit-transform: translateY(-20%);
-            transform: translateY(-20%);
+    transform: translateY(-20%);
     -webkit-transition-delay: 800ms;
-            transition-delay: 800ms;
+    transition-delay: 800ms;
   }
   .card:focus-within .card_content {
     -webkit-transition-duration: 0ms;
-            transition-duration: 0ms;
+    transition-duration: 0ms;
   }
   .card_content > *:not(.card_title) {
     opacity: 0;
@@ -128,17 +129,17 @@ body {
   .card:focus-within .card_content > *:not(.card_title) {
     opacity: 1;
     -webkit-transition-delay: 700ms;
-            transition-delay: 700ms;
+    transition-delay: 700ms;
   }
   .card:hover,
   .card:focus-within {
     -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    transform: scale(1.05);
   }
   .card:hover .card_title::after,
   .card:focus-within .card_title::after {
     -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    transform: scaleX(1);
   }
 }
 /*# sourceMappingURL=main.css.map */
