--- a/Category/css/main.css
+++ b/Category/css/main.css
@@ -106,4 +106,57 @@ body {
      object-fit: cover;
   z-index: -1;
 }
+
+.blank_div {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  margin-top: 16vh;
+}
+
+.blank_page {
+  width: 30%;
+  color: #303030;
+  text-decoration: underline;
+}
+
+.blank_div img {
+  width: 50%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#sw ul, #ed ul, #fd ul, #wm ul, #sp ul, #re ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#sw ul li, #ed ul li, #fd ul li, #wm ul li, #sp ul li, #re ul li {
+  list-style: none;
+}
+
+.csec {
+  right: 0;
+  top: 15vh;
+  width: 85vw;
+  margin-top: 15vh;
+  float: right;
+}
 /*# sourceMappingURL=main.css.map */
