--- a/Category/css/main.scss
+++ b/Category/css/main.scss
@@ -90,3 +90,48 @@ body{
     // display: none;
     z-index: -1;
 }
+
+.blank_div{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 16vh;
+}
+
+.blank_page{
+    width: 30%;
+    // text-align: center;
+    // margin-top: 40vh;
+    color: #303030;
+    text-decoration: underline;
+}
+
+.blank_div img{
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+}
+
+#sw ul, #ed ul, #fd ul, #wm ul, #sp ul, #re ul{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#sw ul li, #ed ul li, #fd ul li, #wm ul li, #sp ul li, #re ul li{
+    list-style: none;
+}
+
+.csec{
+    // position: fixed;
+    right: 0;
+    top: 15vh;
+    width: 85vw;
+    // height: 70vh;
+    margin-top: 15vh;
+    float: right;
+    // background-color: aqua;
+}
