--- a/Category/css/navbar.scss
+++ b/Category/css/navbar.scss
@@ -1,4 +1,7 @@
 header{
+    position: relative;
+    z-index: 50;
+    background-color: #FBFBFB;
     position: fixed;
     top: 0;
     // background-color: aliceblue;
@@ -8,6 +11,7 @@ header{
     align-items: center;
     justify-content: space-between;
     height: 10vh;
+    box-shadow: 0px 20px 28px -8px rgba(0, 0, 0, 0.05);
 }
 
 header .logo{
