Discover Page added

--- a/Category/Card/main.css
+++ b/Category/Card/main.css
@@ -1,11 +1,11 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-} */
+}
 
-/* body {
+body {
   background-color: #f2f2f2;
   font-family: 'Circe Regular';
   display: -webkit-box;
@@ -18,18 +18,17 @@
       -ms-flex-pack: center;
           justify-content: center;
   margin: auto;
-} */
+}
 
 .card {
   color: white;
   background: #0F78E8;
   background-size: cover;
-  /* margin-top: 20vh; */
+  margin-top: 20vh;
   margin-left: 2em;
   margin-bottom: 5em;
   padding: 10rem 0 0;
-  /* max-width: 27ch; */
-  width: 24ch;
+  max-width: 27ch;
   border-radius: 1em;
   overflow: hidden;
   -webkit-transition: -webkit-transform 500ms ease;
