--- a/Category/Card/main.css
+++ b/Category/Card/main.css
@@ -19,10 +19,17 @@
           justify-content: center;
   margin: auto;
 } */
-
+#sw,
+#ed,
+#fd,
+#wm,
+#sp,
+#re {
+  display: none;
+}
 .card {
   color: white;
-  background: #0F78E8;
+  background: #0f78e8;
   background-size: cover;
   /* margin-top: 20vh; */
   margin-left: 2em;
@@ -40,7 +47,7 @@
 
 .card:hover {
   -webkit-box-shadow: 0px 20px 36px -10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 20px 36px -10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 20px 36px -10px rgba(0, 0, 0, 0.25);
 }
 
 .card_content {
@@ -60,17 +67,17 @@
 }
 
 .card_title::after {
-  content: " ";
+  content: ' ';
   position: absolute;
   height: 4px;
-  left: calc((var(--padding))*-1);
+  left: calc((var(--padding)) * -1);
   bottom: 0;
   width: calc(100% + var(--padding));
   background: #fff;
   -webkit-transform-origin: left;
-          transform-origin: left;
+  transform-origin: left;
   -webkit-transform: scaleX(0);
-          transform: scaleX(0);
+  transform: scaleX(0);
   -webkit-transition: -webkit-transform 500ms ease;
   transition: -webkit-transform 500ms ease;
   transition: transform 500ms ease;
@@ -83,7 +90,7 @@
   text-decoration: none;
   color: black;
   background: #61d384;
-  padding: .5em 1.25em;
+  padding: 0.5em 1.25em;
   border-radius: 0.25em;
   margin-top: 10px;
   -webkit-transition: all 2s ease-in;
@@ -92,18 +99,23 @@
 
 .card_title::after {
   -webkit-transform: scaleX(0);
-          transform: scaleX(0);
+  transform: scaleX(0);
 }
 
 .button:hover,
 .button:focus {
   background: white;
 }
+.align-center {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 
 @media (hover) {
   .card_content {
     -webkit-transform: translateY(50%);
-            transform: translateY(50%);
+    transform: translateY(50%);
     -webkit-transition: -webkit-transform 500ms ease;
     transition: -webkit-transform 500ms ease;
     transition: transform 500ms ease;
@@ -112,13 +124,13 @@
   .card:hover .card_content,
   .card:focus-within .card_content {
     -webkit-transform: translateY(-20%);
-            transform: translateY(-20%);
+    transform: translateY(-20%);
     -webkit-transition-delay: 800ms;
-            transition-delay: 800ms;
+    transition-delay: 800ms;
   }
   .card:focus-within .card_content {
     -webkit-transition-duration: 0ms;
-            transition-duration: 0ms;
+    transition-duration: 0ms;
   }
   .card_content > *:not(.card_title) {
     opacity: 0;
@@ -129,17 +141,17 @@
   .card:focus-within .card_content > *:not(.card_title) {
     opacity: 1;
     -webkit-transition-delay: 700ms;
-            transition-delay: 700ms;
+    transition-delay: 700ms;
   }
   .card:hover,
   .card:focus-within {
     -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    transform: scale(1.05);
   }
   .card:hover .card_title::after,
   .card:focus-within .card_title::after {
     -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    transform: scaleX(1);
   }
 }
 /*# sourceMappingURL=main.css.map */
