--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'januaryregular';
   src: url('/Category/fonts/january-webfont.woff2') format('woff2'),
-       url('/Category/fonts/january-webfont.woff') format('woff');
+    url('/Category/fonts/january-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-
 }
 
 * {
@@ -170,7 +169,7 @@ a {
 
 .about-info {
   margin: 60px 0;
-  color: #193C3C;
+  color: #193c3c;
 }
 .donations {
   height: 200px;
@@ -209,4 +208,94 @@ a {
 .stats {
   display: flex;
   flex-direction: column;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.main-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.location {
+  position: fixed;
+  top: 40vh;
+  left: 5vw;
+  z-index: 50;
+}
+
+.location h1 {
+  font-size: 2.5rem;
+}
+
+.location select {
+  margin-top: 10px;
+  font-size: 1.2rem;
+  width: 15vw;
+  border: none;
+  background: none;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.location .select {
+  border: none;
+  background: none;
+  text-decoration: underline;
+}
+
+.location select:hover {
+  -webkit-transform: scale(1.02);
+  transform: scale(1.02);
+}
+
+.csec {
+  width: 70vw;
+  float: right;
+  position: absolute;
+  top: -100px;
+  left: 25vw;
+  -webkit-transform: translateX(-40px);
+  transform: translateX(-40px);
+}
+
+#sw ul,
+#ed ul,
+#fd ul,
+#wm ul,
+#sp ul,
+#re ul {
+  float: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  /* display: flex; */
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+#sw ul li,
+#ed ul li,
+#fd ul li,
+#wm ul li,
+#sp ul li,
+#re ul li {
+  list-style: none;
+  margin: 0;
 }
