--- a/Category/Card/main.scss
+++ b/Category/Card/main.scss
@@ -17,10 +17,11 @@ body {
   color: white;
   background: #0f78e8;
   background-size: cover;
+  margin: 20px;
   margin-top: 20vh;
   // margin-left:2em;
   margin-bottom: 5em;
-  padding: 10rem 0 0;
+  padding: 2.5rem 0 0;
   width: 22ch;
   height: 300px;
   border-radius: 1em;
@@ -48,6 +49,7 @@ body {
 .card_title {
   position: relative;
   width: max-content;
+  font-size: 1.5rem;
 }
 
 .card_title::after {
