--- a/Category/Card/main.css
+++ b/Category/Card/main.css
@@ -47,8 +47,28 @@ body {
 }
 
 .card_content {
-  --padding: 1.5rem;
-  padding: var(--padding);
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card_content h1 {
+  margin-top: 10px;
+}
+
+.card_content img {
+  margin-top: 20px;
 }
 
 .card_content p {
@@ -61,6 +81,8 @@ body {
   width: -moz-max-content;
   width: max-content;
   font-size: 1.5rem;
+  max-width: 100%;
+  text-align: center;
 }
 
 .card_title::after {
