--- a/Category/Card/main.scss
+++ b/Category/Card/main.scss
@@ -38,10 +38,22 @@ body {
 }
 
 .card_content {
-  --padding: 1.5rem;
-  padding: var(--padding);
+  // --padding: 1.5rem;
+  // padding: var(--padding);
   // transform: translateY(-20px);
   // transform: translateY(65%);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  align-items: center;
+  h1 {
+    margin-top: 10px;
+  }
+  img {
+    margin-top: 20px;
+  }
   p {
     margin-top: 10px;
   }
@@ -51,6 +63,8 @@ body {
   position: relative;
   width: max-content;
   font-size: 1.5rem;
+  max-width: 100%;
+  text-align: center;
 }
 
 .card_title::after {
