--- a/style.css
+++ b/style.css
@@ -299,3 +299,57 @@ a {
   list-style: none;
   margin: 0;
 }
+#organization {
+  min-height: 100vh;
+}
+#organization .sectionOrg {
+  position: relative;
+  top: 50px;
+  height: 75vh;
+  width: 90%;
+  display: flex;
+}
+#organization .sectionOrg .left-section,
+#organization .sectionOrg .right-section {
+  flex: 0.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  padding: 10px;
+}
+#organization .sectionOrg .right-section {
+  background: white;
+  box-shadow: 2px 2px 10px rgb(176, 178, 180);
+}
+#organization .sectionOrg .right-section h1 {
+  margin: 20px 0;
+}
+#organization .sectionOrg .right-section form {
+  width: 70%;
+  margin: 10px;
+}
+#organization .sectionOrg .right-section div {
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+}
+#organization .sectionOrg .right-section div input {
+  padding: 8px 10px;
+  width: 100%;
+}
+
+#OrgInp,
+#OrgStatus {
+  padding: 10px;
+  margin: 30px 80px;
+}
+
+#status-info {
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+  left: 12%;
+  color: #707979;
+}
